<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CroUniversity</string>
    <string name="homepage">首页</string>
    <string name="productcro">产品众筹</string>
    <string name="charitypro">公益众筹</string>
    <string name="travelpro">旅游众筹</string>
    <string name="catepro">美食众筹</string>
    <string name="studycommunity">学习社区</string>
    <string name="livecommunity">生活社区</string>
    <string name="originalitycommunity">创意社区</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">设置</string>
    <string name="pagerindicator">pagerindicator</string>
    <string name="btn_start_main">进入应用</string>
    <string name="signin_email">邮箱</string>
    <string name="signin_pwd">密码</string>
    <string name="signin_in">登录</string>
    <string name="signin_up">注册</string>
    <string name="user_name">用户名</string>
    <string name="signup_second_pwd">请再次输入密码</string>
    <string name="protocol">我已同意服务协议</string>
    <string name="sign_qq_ip">QQ登录</string>
    <string name="completed">已完成</string>
    <string name="fund">目标资金</string>
    <string name="remaindays">剩余天数</string>
    <string name="action_clicked">Action clicked</string>
    <string name="send">发送</string>
    <string name="commit">确定</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="issue">发布</string>
    <string name="empty">内容为空</string>

</resources>