<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/pro_cro_completed"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="5dip"
            android:layout_marginBottom="3dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_marginTop="2dip"
            android:max="100"
            android:progressDrawable="@drawable/custom_progressbar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.33"
            android:gravity="center"
            android:text="@string/completed" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.33"
            android:gravity="center"
            android:text="@string/fund" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.33"
            android:gravity="center"
            android:text="@string/remaindays" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_main_completed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.33"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_main_fund"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.33"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_main_remaindays"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.33"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>